# cube-get

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README  README.md  THIRDPARTY  configure.ac  libtool  meson.build
.github/workflows/: build-windows.yml  build.yml  docs.yml  release.yml
data/: cube-server.desktop
debian/: changelog  control  copyright  postinst
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  about.md  download-package.md  download-repository.md  download.md  index.html  install-package.md  setup-linux.md  setup-windows.md
scripts/: release-windows.sh  release.sh
src/: Makefile.am  apt-constraint.vala  apt-information.vala  aria2c-downloader.vala  axel-downloader.vala  base-manager.vala  config.vapi  configuration-manager.vala  cube-get.vala  cube-information.vala  cube-server.rc  cube-system.vala  cube_server.vala  dependency-manager.vala  download-manager.vala  helpers.vala  installation-manager.vala  linux-information.vala  loggy.vala  meson.build  package-query.vala  package-version.vala  package.vala  process-manager.vala  project-manager.vala  project.vala  repository-manager.vala  server-command-configuration.vala  server-command-download.vala  server-command-install.vala  server-command-project.vala  server-command-repository.vala  server-command-source.vala  server-command-system.vala  server-command-update.vala  server-router.vala  server-system.vala  server.vala  shellinabox.vala  source-manager.vala  (+3 more)
src/core/: apt-constraint.vala  apt-information.vala  aria2c-downloader.vala  axel-downloader.vala  base-manager.vala  configuration-manager.vala  cube-information.vala  cube-system.vala  dependency-manager.vala  download-manager.vala  helpers.vala  installation-manager.vala  linux-information.vala  loggy.vala  package-query.vala  package-version.vala  package.vala  process-manager.vala  project-manager.vala  project.vala  repository-manager.vala  shellinabox.vala  source-manager.vala  sources.vala  system-information.vala
src/server/: server-command-configuration.vala  server-command-download.vala  server-command-install.vala  server-command-project.vala  server-command-repository.vala  server-command-source.vala  server-command-system.vala  server-command-update.vala  server-router.vala  server-system.vala  server.vala
template/cube-get.AppDir/: AppRun  cube-get.appdata.xml  cube-get.desktop
template/cube-get.AppDir/usr/share/metainfo/: cube-get.appdata.xml
template/windres/: cube-server.rc
